# visibility-color-optimization

./: .gitignore  CMakeLists.txt  LICENSE  README.md  buffer.cpp  buffer.hpp  camera.hpp  colormap.cpp  colormap.hpp  d3d.hpp  gpuprofiler.cpp  gpuprofiler.hpp  imgui_helper.cpp  imgui_helper.hpp  lines.cpp  lines.hpp  main.cpp  math.hpp  renderer.cpp  renderer.hpp  rendertarget2d.cpp  rendertarget2d.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp  shader_CalculateBiHistogramCDF.hlsl  shader_CalculateHistogram.hlsl  shader_CalculateHistogramCDF.hlsl  shader_CalculateSegmentedHistogramCDF.hlsl  shader_Common.hlsli  shader_ConstantBuffers.hlsli  shader_CreateLists_HQ.hlsl  shader_CreateLists_LowRes.hlsl  shader_DebugGeometry.hlsl  shader_DebugQuad.hlsl  shader_ExponentialDamping.hlsl  shader_FragmentList_HQ.hlsli  shader_FragmentList_LowRes.hlsli  shader_MinGather_LowRes.hlsl  (+5 more)
raw_data/Transformer/: Acceleration.cpp  Acceleration.hpp  AmiraReader.cpp  AmiraReader.hpp  CMakeLists.txt  LineDistanceMetrics.cpp  LineDistanceMetrics.hpp  LineValues.cpp  LineValues.hpp  Normalize.cpp  Normalize.hpp  ObjectReader.cpp  ObjectReader.hpp  ObjectWriter.cpp  ObjectWriter.hpp  SteadyTracer.cpp  SteadyTracer.hpp  Vorticity.cpp  Vorticity.hpp  main.cpp
